--- a/src/styles/common/app.scss
+++ b/src/styles/common/app.scss
@@ -1,16 +1,21 @@
-.app {
-  display: flex;
-  flex-direction: column;
+.dark-context-container {
   width: 100%;
   height: 100%;
 
-  .main-container {
+  .app {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 
-    .content-dark {
-      background-color: black;
-      color: white;
+    .main-container {
+      width: 100%;
+      height: 100%;
+
+      .content-dark {
+        background-color: black;
+        color: white;
+      }
     }
   }
 }
