--- a/src/styles/pages/landing.scss
+++ b/src/styles/pages/landing.scss
@@ -1,4 +1,7 @@
-.landing-container {
+.page-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #fefefe;
