added a glow effect and cleaned up code

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,4 @@
 @import "./common/app.scss";
 @import "./customComponents/switch.scss";
 
-@import "./pages/landing.scss";
-@import "./pages/photos.scss";
+@import "./pages/pages.scss";
