--- a/src/styles/common/app.scss
+++ b/src/styles/common/app.scss
@@ -11,10 +11,29 @@
     .main-container {
       width: 100%;
       height: 100%;
+      font-size: 50px;
 
       .content-dark {
         background-color: black;
-        color: white;
+        // color: #fff;
+        // text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+        //   0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+        color: #fff;
+        text-align: center;
+        animation: content-dark 1s ease-in-out infinite alternate;
+
+        @keyframes content-dark {
+          from {
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px rgb(2, 155, 104),
+              0 0 40px rgb(2, 155, 104), 0 0 50px rgb(2, 155, 104),
+              0 0 60px rgb(2, 155, 104), 0 0 70px rgb(2, 155, 104);
+          }
+
+          to {
+            text-shadow: 0 0 20px #fff, 0 0 30px #0fa, 0 0 40px #0fa,
+              0 0 50px #0fa, 0 0 60px #0fa, 0 0 70px #0fa, 0 0 80px #0fa;
+          }
+        }
       }
     }
   }
